# indie_studio_2018

./: CMakeLists.txt  README.md  cleanIndie.sh  runIndie.sh
Assets/Models/Bomb/: bomb.mtl
Assets/Models/Bonus/: bomb-bonus.b3d  bomb-malus.b3d  bonus-fire.fbx  fire-bonus.b3d  fire-malus.b3d
Assets/Models/Box/: box.3ds
Assets/Models/Fence/: fence.3ds
Assets/Models/Fire/: box.3ds
Assets/Models/Mobs/Blob/: blob.3ds  blob.b3d
Assets/Models/Mobs/Dodger/: dodger.b3d
Assets/Models/Mobs/Leeroy/: leeroy.b3d
Assets/Models/Mobs/Zombie/: zombie.3ds  zombie.b3d  zombie.fbx
Assets/Models/Wall/: wall.3ds
Assets/bonus/: bonus-speed.b3d
Assets/lobby/: water.b3d
Assets/menu/: btn_credits_hoover.psd
Maps/: 1-1.json  1-2.json  1-3.json  1-4.json  1-5.json  1-6.json  2-1.json  2-2.json  2-3.json  2-4.json  2-5.json  2-6.json  2-7.json  2-8.json  3-1.json  3-2.json  3-3.json  3-4.json  3-5.json  3-6.json  3-7.json
Src/: Includes.hpp  Types.hpp  main.cpp
Src/Artificial Intelligences/: bomberMulti.lua  bomberSolo.lua  dodger.lua  leeroy.lua  random.lua
Src/CollisionManager/: CollisionManager.cpp  CollisionManager.hpp
Src/Component/: Component.cpp  Component.hpp  IComponent.hpp
Src/Component/AnimatedMeshComponent/: AnimatedMeshComponent.cpp  AnimatedMeshComponent.hpp
Src/Component/BombComponent/: BombComponent.cpp  BombComponent.hpp
Src/Component/CollisionComponent/: CollisionComponent.cpp  CollisionComponent.hpp
Src/Component/CollisionComponent/Monster/: MonsterCollisionComponent.cpp  MonsterCollisionComponent.hpp
Src/Component/CollisionComponent/Player/: PlayerCollisionComponent.cpp  PlayerCollisionComponent.hpp
Src/Component/EventComponent/: EventComponent.cpp  EventComponent.hpp
Src/Component/MovementComponent/: MovementComponent.cpp  MovementComponent.hpp
Src/Component/ParticleComponent/: ParticleComponent.cpp  ParticleComponent.hpp
Src/Core/: Core.cpp  Core.hpp
Src/Factory/: Factory.cpp  Factory.hpp
Src/Input/: EventReceiver.cpp  EventReceiver.hpp
Src/LuaAPI/: LuaAPI.cpp  LuaAPI.hpp
Src/Menu/: IMenu.hpp  Menu.cpp  Menu.hpp
Src/Menu/ControlKey/: ControlKey.cpp  ControlKey.hpp
Src/Menu/Credits/: Credits.cpp  Credits.hpp
Src/Menu/DjControl/: DjControl.cpp  DjControl.hpp
Src/Menu/LoadGame/: LoadGame.cpp  LoadGame.hpp
Src/Menu/Lobby/: Lobby.cpp  Lobby.hpp
Src/Menu/Lobby/BombermanLobby/: BombermanLobby.cpp  BombermanLobby.hpp
Src/Menu/MultiPlayerMode/: MultiPlayerMode.cpp  MultiPlayerMode.hpp
Src/Menu/Principal/: Principal.cpp  Principal.hpp
Src/Menu/Settings/: Settings.cpp  Settings.hpp
Src/Menu/SoloMode/: SoloMode.cpp  SoloMode.hpp
Src/Menu/Utils/MapAnyTypes/: MapAnyTypes.cpp  MapAnyTypes.hpp
Src/Object/: IObject.hpp  Object.cpp  Object.hpp
Src/Object/Block/: Block.cpp  Block.hpp
Src/Object/Block/Box/: Box.cpp  Box.hpp
Src/Object/Block/Exit/: Exit.cpp  Exit.hpp
Src/Object/Block/Fence/: Fence.cpp  Fence.hpp
Src/Object/Block/Wall/: Wall.cpp  Wall.hpp
Src/Object/Bomb/: Bomb.cpp  Bomb.hpp
Src/Object/Bonus/: Bonus.cpp  Bonus.hpp
Src/Object/Camera/: GameCamera.cpp  GameCamera.hpp
Src/Object/Character/: Character.cpp  Character.hpp
Src/Object/Character/AI/: AI.cpp  AI.hpp
Src/Object/Character/AI/Blob/: Blob.cpp  Blob.hpp
Src/Object/Character/AI/Bomber/: Bomber.cpp  Bomber.hpp
Src/Object/Character/AI/Dodger/: Dodger.cpp  Dodger.hpp
Src/Object/Character/AI/Leeroy/: Leeroy.cpp  Leeroy.hpp
Src/Object/Character/BomberMan/: BomberMan.cpp  BomberMan.hpp
Src/Object/Character/BomberMan/Player/: Player.cpp  Player.hpp
Src/Object/Fire/: Fire.cpp  Fire.hpp
Src/Object/Light/: GameLight.cpp  GameLight.hpp
Src/Object/Map/: Map.cpp  Map.hpp
Src/Object/MapBackground/: MapBackground.cpp  MapBackground.hpp
Src/PersistantData/: PersistantData.cpp  PersistantData.hpp
Src/Save/: ISerializableEntity.hpp
Src/Scene/: IScene.hpp
Src/Scene/GameScene/: GameScene.cpp  GameScene.hpp
Src/Scene/MenuScene/: MenuScene.cpp  MenuScene.hpp
Src/ScoreManager/: ScoreManager.cpp  ScoreManager.hpp
Src/UI/: GameUI.cpp  GameUI.hpp
Src/UI/Timer/: Timer.cpp  Timer.hpp
Src/Utils/: Utils.cpp  Utils.hpp
docs/: Doxyfile.in  mainpage.hpp
